--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.9.0",
+    "react-icons": "^4.12.0",
     "react-lazyload": "^3.2.0",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
